implementação de testes aumento de cobertura